force-app/main/default/objects/Chat_Participant__c/Chat_Participant__c.object-meta.xml
<CustomObject>
    <label>Chat Participant</label>
    <pluralLabel>Chat Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Participant ID</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>