force-app/main/default/objects/Chat_Participant__c/fields/Chat_Session__c.field-meta.xml
<CustomField>
    <fullName>Chat_Session__c</fullName>
    <label>Chat Session</label>
    <referenceTo>Chat_Session__c</referenceTo>
    <relationshipLabel>Participants</relationshipLabel>
    <relationshipName>Participants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>