force-app/main/default/objects/Chat_Participant__c/fields/Is_Pinned__c.field-meta.xml
<CustomField>
    <fullName>Is_Pinned__c</fullName>
    <label>Is Pinned</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>