force-app/main/default/objects/Chat_Participant__c/fields/Last_Read_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Read_At__c</fullName>
    <label>Last Read At</label>
    <type>DateTime</type>
</CustomField>